--- a/generators/react-native/templates/package.json
+++ b/generators/react-native/templates/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@react-native-community/eslint-config": "3.2.0",
+    "@redux-devtools/extension": "3.3.0",
     "@storybook/addons": "7.6.13",
     "@storybook/react-native": "6.5.7",
     "@storybook/theming": "7.6.17",
@@ -55,7 +56,6 @@
     "path-exists": "5.0.0",
     "prettier": "3.2.5",
     "react-test-renderer": "18.2.0",
-    "redux-devtools-extension": "2.13.9",
     "resolve": "1.22.8",
     "rimraf": "5.0.5",
     "tapable": "2.2.1"
