--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -30,7 +30,7 @@ jobs:
     timeout-minutes: 90
     defaults:
       run:
-        working-directory: ${{ github.workspace }}/app
+        working-directory: ${{ github.workspace }}/client
     strategy:
       fail-fast: false
       matrix:
@@ -74,6 +74,8 @@ jobs:
       JHI_SCREENSHOTS: ${{ github.event.inputs.screenshots || 'false' }}
     steps:
       - uses: jhipster/actions/create-app-path@v0
+        with:
+          application-path: ${{ github.workspace }}/client
       - uses: jhipster/actions/setup-git@v0
       - uses: jhipster/actions/restore-cache@v0
         with:
