--- a/generators/react-native/resources/expo/package.json
+++ b/generators/react-native/resources/expo/package.json
@@ -7,35 +7,35 @@
     "update-dependencies": "npm install && npx expo install --fix && rm -rf package-lock.json node_modules"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/datetimepicker": "7.2.0",
-    "@react-native-masked-view/masked-view": "0.2.9",
-    "@react-native-picker/picker": "2.4.10",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-masked-view/masked-view": "0.3.0",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/devtools": "6.0.23",
-    "expo": "49.0.21",
-    "expo-auth-session": "~5.0.2",
-    "expo-constants": "~14.4.2",
-    "expo-image-picker": "~14.3.2",
-    "expo-linking": "~5.0.2",
-    "expo-random": "~13.2.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-web-browser": "~12.3.2",
+    "expo": "50.0.8",
+    "expo-auth-session": "~5.4.0",
+    "expo-constants": "~15.4.5",
+    "expo-image-picker": "~14.7.1",
+    "expo-linking": "~6.2.2",
+    "expo-random": "~13.6.0",
+    "expo-splash-screen": "~0.26.4",
+    "expo-status-bar": "~1.11.1",
+    "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.10",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@react-native-community/cli-server-api": "13.6.1",
     "@types/react": "~18.2.63",
-    "jest-expo": "^49.0.0",
+    "jest-expo": "~50.0.2",
     "typescript": "^5.4.2"
   }
 }
