--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   "dependencies": {
     "chalk": "4.1.2",
     "fs-extra": "11.2.0",
-    "generator-jhipster": "^8.4.0",
+    "generator-jhipster": "8.4.0",
     "lodash-es": "4.17.21",
     "pluralize": "8.0.0",
     "semver": "7.6.0",
