--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   "type": "module",
   "main": "generators/app/index.js",
   "bin": {
-    "jhipster-react-native": "./cli/rnhipster.cjs",
-    "rnhipster": "./cli/rnhipster.cjs"
+    "rnhipster": "./cli/cli.cjs"
   },
   "files": [
     "cli",
