--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -102,8 +102,6 @@ jobs:
         with:
           path: generator-jhipster-react-native
           fetch-depth: 2
-      - run: $SCRIPT_DIR/install-node-dependencies.sh
-        name: 'TOOLS: install node dependencies'
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: latest
@@ -122,7 +120,7 @@ jobs:
       - run: $SCRIPT_DIR/copy-jdl-file.sh
         name: 'SETUP: copy the JDL file for the backend and app'
         working-directory: ${{ github.workspace }}/generator-jhipster-react-native
-      - run: jhipster jdl ../${JHI_REACT_NATIVE_APP_NAME}.jdl --force --skip-checks --skip-commit-hook --no-insight --skip-install
+      - run: cli.cjs jdl ../${JHI_REACT_NATIVE_APP_NAME}.jdl --force --skip-checks --skip-commit-hook --no-insight --skip-install --disable-blueprints
         name: 'GENERATING: generate jhipster backend'
         working-directory: ${{ github.workspace }}/backend
       - run: cli.cjs --force --skip-install
