--- a/package.json
+++ b/package.json
@@ -56,37 +56,23 @@
     "*.js": "npm run lint --"
   },
   "dependencies": {
-    "chalk": "4.1.2",
-    "fs-extra": "11.2.0",
+    "chalk": "^4.1.2",
     "generator-jhipster": "8.4.0",
-    "lodash-es": "4.17.21",
-    "pluralize": "8.0.0",
-    "semver": "7.6.0",
-    "shelljs": "0.8.5",
-    "yeoman-environment": "4.2.1"
+    "lodash-es": "^4.17.21",
+    "semver": "^7.6.0"
   },
   "devDependencies": {
-    "chai": "4.3.10",
     "ejs-lint": "2.0.0",
     "eslint": "8.57.0",
-    "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-prettier": "5.1.3",
     "husky": "8.0.3",
     "jsdoc": "4.0.2",
     "lint-staged": "15.2.2",
-    "mem-fs": "4.0.0",
-    "mocha": "10.3.0",
-    "np": "9.2.0",
     "prettier": "3.2.5",
-    "sinon": "17.0.1",
     "vitest": "1.5.2",
-    "yeoman-assert": "3.1.1",
     "yeoman-test": ">=8.0.0-rc.1"
-  },
-  "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.9.5"
   },
   "engines": {
     "node": "^18.13.0 || >= 20.6.1",
