add github-build-matrix command

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -42,6 +42,7 @@
         "written": true
       }
     },
+    "githubWorkflows": true,
     "jhipsterVersion": "8.1.0",
     "localBlueprint": false,
     "sampleWritten": true,
