--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -31,40 +31,58 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 20.x
       - name: check-dependencies
         run: |
           cd generators/react-native/resources/expo
           npm run check-dependencies
-
-  build-matrix:
-    runs-on: ubuntu-latest
-    needs: [check-dependencies]
-    outputs:
-      matrix: ${{ steps.build.outputs.matrix }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - id: build
-        run: |
-          npm ci --ignore-scripts --omit=dev
-          cli/cli.cjs github-build-matrix
-
   applications:
-    name: ${{ matrix.sample-name }}
+    name: e2e-${{ matrix.app_type }}-${{ matrix.jhipster_version }}
     runs-on: macos-13
-    needs: build-matrix
+    needs: [check-dependencies]
     timeout-minutes: 90
     defaults:
       run:
         working-directory: ${{ github.workspace }}/client
     strategy:
       fail-fast: false
-      matrix: ${{fromJson(needs.build-matrix.outputs.matrix)}}
+      matrix:
+        jhipster_version: [8]
+        node_version: [20.x]
+        app_type:
+          - JwtDtoApp
+          - JwtWebsocketsApp
+          - JwtHealthPointsApp
+          - JwtFlickrApp
+          - OauthApp
+        include:
+          - app_type: JwtDtoApp
+            auth_type: jwt
+            dto: true
+          - app_type: JwtWebsocketsApp
+            auth_type: jwt
+            dto: false
+            websockets: true
+          - app_type: JwtHealthPointsApp
+            auth_type: jwt
+            dto: false
+            entity_jdl: entities-21points.jdl
+          - app_type: JwtFlickrApp
+            auth_type: jwt
+            dto: false
+            entity_jdl: entities-flickr2.jdl
+          - app_type: OauthApp
+            auth_type: oauth2
+            dto: false
     env:
+      JHI_REACT_NATIVE_APP_NAME: ${{ matrix.app_type }}
+      JHI_AUTH_TYPE: ${{ matrix.auth_type }}
+      JHI_DTO: ${{ matrix.dto }}
+      JHI_WEBSOCKETS: ${{ matrix.websockets }}
+      JHI_ENTITY_JDL: ${{ matrix.entity_jdl }}
+      JHIPSTER_VERSION: ${{ matrix.jhipster_version }}
       SCRIPT_DIR: ${{ github.workspace }}/generator-jhipster-react-native/test/scripts
+      PLATFORM: ios
       JHI_RECORD_VIDEO: ${{ github.event.inputs.recordVideo || 'false' }}
       JHI_SCREENSHOTS: ${{ github.event.inputs.screenshots || 'false' }}
     steps:
@@ -102,8 +120,11 @@ jobs:
       - run: $SCRIPT_DIR/copy-jdl-file.sh
         name: 'SETUP: copy the JDL file for the backend and app'
         working-directory: ${{ github.workspace }}/generator-jhipster-react-native
-      - run: cli.cjs generate-sample ${{ matrix.sample-name }} --force --skip-commit-hook --no-insight --skip-install
+      - run: cli.cjs jdl ../${JHI_REACT_NATIVE_APP_NAME}.jdl --force --skip-checks --skip-commit-hook --no-insight --skip-install --disable-blueprints
+        name: 'GENERATING: generate jhipster backend'
         working-directory: ${{ github.workspace }}/backend
+      - run: cli.cjs --force --skip-install
+        name: 'GENERATING: generate react-native app'
       - uses: jhipster/actions/compare-sample@v0
         continue-on-error: true
         id: compare
