--- a/generators/react-native/templates/package.json
+++ b/generators/react-native/templates/package.json
@@ -32,6 +32,8 @@
     "yup": "1.4.0"
   },
   "devDependencies": {
+    "@babel/runtime": "7.24.7",
+    "@config-plugins/detox": "6.0.0",
     "@react-native-community/eslint-config": "3.2.0",
     "@redux-devtools/extension": "3.3.0",
     "@storybook/addons": "7.6.13",
@@ -39,6 +41,7 @@
     "@storybook/theming": "7.6.17",
     "@testing-library/jest-native": "5.4.3",
     "@testing-library/react-native": "12.5.1",
+    "@types/jest": "29.5.12",
     "babel-jest": "29.7.0",
     "babel-preset-env": "1.7.0",
     "buffer": "6.0.3",
@@ -58,6 +61,7 @@
     "react-test-renderer": "18.2.0",
     "resolve": "1.22.8",
     "rimraf": "5.0.7",
-    "tapable": "2.2.1"
+    "tapable": "2.2.1",
+    "ts-jest": "29.1.4"
   }
 }
