--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -143,17 +143,19 @@ jobs:
       - run: npm install
         if: steps.compare.outputs.equals != 'true'
       - run: npx expo prebuild -p ios
-      - run: git add . && git diff
+        if: steps.compare.outputs.equals != 'true'
       - run: npm run e2e:build:ios
+        if: steps.compare.outputs.equals != 'true'
       - run: |
           npm run app:start &
           npm install -g wait-on
           wait-on -t 60000 http-get://127.0.0.1:8080/management/health
-        if: matrix.backend != 'false'
+        if: steps.compare.outputs.equals != 'true' && matrix.backend != 'false'
         working-directory: ${{ github.workspace }}/backend
       - run: npm run e2e:test:ios
+        if: steps.compare.outputs.equals != 'true'
       - uses: actions/upload-artifact@v4
-        if: ${{ always() }}
+        if: steps.compare.outputs.equals != 'true' && always()
         with:
           name: expo-app-${{ matrix.app_type }}-${{ matrix.jhipster_version }}
           path: |
