--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -134,6 +134,9 @@ jobs:
         if: steps.compare.outputs.equals != 'true'
         working-directory: ${{ github.workspace }}/backend
       - run: npm run e2e:test:ios
+        timeout-minutes: 15
+        env:
+          DETOX_RECORD_VIDEOS: "${{ contains(github.event.pull_request.labels.*.name, 'pr: record-videos') && 'all' || 'none' }}"
         if: steps.compare.outputs.equals != 'true'
       - uses: actions/upload-artifact@v4
         if: steps.compare.outputs.equals != 'true' && always()
