--- a/generators/spring-boot/templates/src/main/resources/config/application-e2e-cors.yml
+++ b/generators/spring-boot/templates/src/main/resources/config/application-e2e-cors.yml
@@ -1,6 +1,6 @@
 jhipster:
   cors:
-    allowed-origins: "http://localhost:8100,capacitor://localhost,http://localhost"
+    allowed-origins: "http://localhost:8081,http://localhost"
     allowed-methods: "*"
     allowed-headers: "*"
     exposed-headers: "Authorization,Link,X-Total-Count,X-${jhipster.clientApp.name}-alert,X-${jhipster.clientApp.name}-error,X-${jhipster.clientApp.name}-params"
