--- a/generators/react-native/templates/package.json
+++ b/generators/react-native/templates/package.json
@@ -29,6 +29,7 @@
     "seamless-immutable": "7.1.4",
     "sockjs-client": "1.6.1",
     "webstomp-client": "1.2.6",
+    "setimmediate": "1.0.5",
     "yup": "1.4.0"
   },
   "devDependencies": {
