--- a/generators/react-native/resources/expo/package.json
+++ b/generators/react-native/resources/expo/package.json
@@ -37,6 +37,6 @@
     "@react-native-community/cli-server-api": "13.6.9",
     "@types/react": "~18.2.65",
     "jest-expo": "~51.0.1",
-    "typescript": "~5.3.3"
+    "typescript": "^5.4.5"
   }
 }
