--- a/generators/react-native/resources/expo/package.json
+++ b/generators/react-native/resources/expo/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-masked-view/masked-view": "0.3.1",
@@ -26,7 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.16.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
@@ -35,8 +35,8 @@
   "devDependencies": {
     "@babel/core": "^7.24.7",
     "@react-native-community/cli-server-api": "13.6.9",
-    "@types/react": "~18.2.65",
+    "@types/react": "~18.2.79",
     "jest-expo": "~51.0.2",
-    "typescript": "^5.4.5"
+    "typescript": "~5.3.3"
   }
 }
