--- a/generators/react-native/templates/package.json
+++ b/generators/react-native/templates/package.json
@@ -29,11 +29,12 @@
     "seamless-immutable": "7.1.4",
     "sockjs-client": "1.6.1",
     "webstomp-client": "1.2.6",
+    "setimmediate": "1.0.5",
     "yup": "1.4.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.24.7",
-    "@config-plugins/detox": "6.0.0",
+    "@config-plugins/detox": "8.0.0",
     "@react-native-community/eslint-config": "3.2.0",
     "@redux-devtools/extension": "3.3.0",
     "@storybook/addons": "7.6.17",
