--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "files": [
     "cli",
-    "generators"
+    "generators",
+    "lib"
   ],
   "scripts": {
     "ejslint": "ejslint generators/**/*.ejs",
