--- a/generators/react-native/resources/expo/package.json
+++ b/generators/react-native/resources/expo/package.json
@@ -38,5 +38,12 @@
     "@types/react": "~18.2.79",
     "jest-expo": "~51.0.2",
     "typescript": "~5.3.3"
+  },
+  "expo": {
+    "install": {
+      "exclude": [
+        "expo"
+      ]
+    }
   }
 }
