--- a/generators/react-native/resources/expo/package.json
+++ b/generators/react-native/resources/expo/package.json
@@ -25,10 +25,10 @@
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "~0.74.2",
     "react-native-gesture-handler": "~2.16.2",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "~4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.12"
   },
