--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -108,13 +108,7 @@ jobs:
           timeout_minutes: 60
           command: brew tap wix/brew && brew install applesimutils && applesimutils --list
           retry_wait_seconds: 15
-      - name: 'SETUP MacOS: install docker'
-        run: |
-          brew install docker colima docker-compose
-          colima start
-          sudo ln -sf $HOME/.colima/default/docker.sock /var/run/docker.sock
-          mkdir -p ~/.docker/cli-plugins
-          ln -sfn $HOMEBREW_PREFIX/opt/docker-compose/bin/docker-compose ~/.docker/cli-plugins/docker-compose
+      - uses: douglascamata/setup-docker-macos-action@8d5fa43892aed7eee4effcdea113fd53e4d4bf83
         if: matrix.default-environment == 'prod' && steps.compare.outputs.equals != 'true'
         timeout-minutes: 10
       - run: npm run services:up
