--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -2,6 +2,7 @@
   "generator-jhipster": {
     "additionalSubGenerators": "",
     "baseName": "react-native",
+    "caret": true,
     "cli": true,
     "entities": [],
     "generators": {
