move lib folder

--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
   },
   "files": [
     "cli",
-    "generators",
-    "lib"
+    "generators"
   ],
   "scripts": {
     "ejslint": "ejslint generators/**/*.ejs",
