--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -4,6 +4,7 @@
     "baseName": "react-native",
     "caret": true,
     "cli": true,
+    "cliName": "rnhipster",
     "entities": [],
     "generators": {
       "app": {
@@ -32,7 +33,7 @@
       }
     },
     "githubWorkflows": true,
-    "jhipsterVersion": "8.1.0",
+    "jhipsterVersion": "8.7.1",
     "js": false,
     "localBlueprint": false,
     "packageJsonType": "module",
