update generator-jhipster to 8.7.3 (#1948)

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -43,10 +43,10 @@ jobs:
       - id: build
         run: |
           npm ci --ignore-scripts --omit=dev
-          cli/cli.cjs github-build-matrix
+          cli/cli.cjs github-build-matrix ios
 
   applications:
-    name: ${{ matrix.sample-name }}
+    name: ${{ matrix.sample }}
     runs-on: ${{ matrix.os }}
     needs: build-matrix
     timeout-minutes: 90
@@ -77,7 +77,7 @@ jobs:
           fetch-depth: 2
       - run: npm install
         working-directory: ${{ github.workspace }}/generator-jhipster-react-native
-      - run: cli.cjs generate-sample ${{ matrix.sample-name }} --force --skip-commit-hook
+      - run: cli.cjs generate-sample ${{ matrix.sample }} --force --skip-commit-hook
         working-directory: ${{ github.workspace }}/backend
       - uses: jhipster/actions/compare-sample@v0
         id: compare-backend
@@ -89,7 +89,7 @@ jobs:
           application-folder: backend
           compare-folder: backend
           generator-path: generator-jhipster-react-native
-          cmd: cli.cjs generate-sample ${{ matrix.sample-name }} --force --skip-git --skip-commit-hook
+          cmd: cli.cjs generate-sample ${{ matrix.sample }} --force --skip-git --skip-commit-hook
       - uses: jhipster/actions/compare-sample@v0
         id: compare
         if: >-
@@ -100,7 +100,7 @@ jobs:
           application-folder: backend
           compare-folder: client
           generator-path: generator-jhipster-react-native
-          cmd: cli.cjs generate-sample ${{ matrix.sample-name }} --force --skip-git --skip-commit-hook
+          cmd: cli.cjs generate-sample ${{ matrix.sample }} --force --skip-git --skip-commit-hook
 
       - uses: nick-invision/retry@v3.0.0
         name: 'TOOLS: installing applesimutils'
@@ -127,17 +127,17 @@ jobs:
           npm run app:start &
           npm install -g wait-on
           wait-on -t 60000 http-get://127.0.0.1:8080/management/health
-        if: steps.compare.outputs.equals != 'true'
+        if: steps.compare.outputs.equals != 'true' && matrix.skip-e2e != 'true'
         working-directory: ${{ github.workspace }}/backend
       - run: npm run e2e:test:ios
         timeout-minutes: 15
         env:
           DETOX_RECORD_VIDEOS: "${{ contains(github.event.pull_request.labels.*.name, 'pr: record-videos') && 'all' || 'none' }}"
-        if: steps.compare.outputs.equals != 'true'
+        if: steps.compare.outputs.equals != 'true' && matrix.skip-e2e != 'true'
       - uses: actions/upload-artifact@v4
         if: steps.compare.outputs.equals != 'true' && always()
         with:
-          name: expo-app-${{ matrix.sample-name }}
+          name: expo-app-${{ matrix.sample }}
           path: |
             ${{ github.workspace }}/client/
             !${{ github.workspace }}/**/android
